--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 .main {
   flex-grow: 1;
-  }
+
+}
   #root {
-    
     min-height: 100vh;
     color: #fff;
     background: linear-gradient(60deg, blue, rgb(16, 36, 225), rgb(6, 56, 94), black);
     background-size: 400% 400%;
     position: relative;
     animation: cambiar 10s ease-in-out infinite;
-    
+    display: flex;
     flex-direction: column;
   }
   #footer{
